force-app/main/default/objects/pp_NewRegistrations__c/pp_NewRegistrations__c.object-meta.xml
<CustomObject>
    <label>pp_NewRegistrations</label>
    <nameField>
        <label>pp_NewRegistrations</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>pp_NewRegistrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>