force-app/main/default/objects/pp_NewRegistrations__c/fields/Company_Name_Portal__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Portal__c</fullName>
    <label>Company_Name_Portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>