force-app/main/default/objects/pp_NewRegistrations__c/fields/emailCode__c.field-meta.xml
<CustomField>
    <fullName>emailCode__c</fullName>
    <label>emailCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>