force-app/main/default/objects/pp_NewRegistrations__c/fields/Industr__c.field-meta.xml
<CustomField>
    <fullName>Industr__c</fullName>
    <label>Industr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>