force-app/main/default/objects/pp_NewRegistrations__c/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <label>Portal_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>