force-app/main/default/objects/pp_NewRegistrations__c/fields/Referal_Account__c.field-meta.xml
<CustomField>
    <fullName>Referal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>pp_NewRegistrations</relationshipLabel>
    <relationshipName>pp_NewRegistrations</relationshipName>
    <type>Lookup</type>
</CustomField>