force-app/main/default/objects/pp_NewRegistrations__c/fields/Referal_Id__c.field-meta.xml
<CustomField>
    <fullName>Referal_Id__c</fullName>
    <label>Referal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>