force-app/main/default/objects/pp_NewRegistrations__c/fields/registrationStatus__c.field-meta.xml
<CustomField>
    <fullName>registrationStatus__c</fullName>
    <label>registrationStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>