force-app/main/default/objects/pp_NewRegistrations__c/fields/Website_Portal__c.field-meta.xml
<CustomField>
    <fullName>Website_Portal__c</fullName>
    <label>Website_Portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>