force-app/main/default/objects/pp_NewRegistrations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name_Portal__c</columns>
    <columns>Email__c</columns>
    <columns>FirstName__c</columns>
    <columns>Industr__c</columns>
    <columns>LastName__c</columns>
    <columns>MailingCity__c</columns>
    <columns>MailingCountry__c</columns>
    <columns>MailingPostalCode__c</columns>
    <columns>MailingState__c</columns>
    <columns>MailingStreet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>